--- a/index.html
+++ b/index.html
@@ -2,9 +2,38 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link href="catalog.html">
     <title>Седона</title>
   </head>
   <body>
+    <header class="page-header">
+      <nav class="header-nav">
+        <img src="#" alt="Логотип">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостинницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#"><span class="visually-hidden">Избранное</span></a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#"><span class="visually-hidden">Бронирование</span></a>
+          </li>
+        </ul>
+    </header>
+    <main>
 
+    </main>
   </body>
 </html>
