--- a/index.html
+++ b/index.html
@@ -28,12 +28,80 @@
             <a class="navigation-link" href="#"><span class="visually-hidden">Избранное</span></a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#"><span class="visually-hidden">Бронирование</span></a>
+            <button type="button">Хочу сюда!</button>
           </li>
         </ul>
     </header>
-    <main>
-
+    <main class="main-index">
+      <section class="hero">
+        <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
+        <img class='logo' src="#" alt="Вид Седоны">
+        <p>Седона - небольшой городок в Аризоне, заслуживающий большего!</p>
+        <p>Рассмотрим причины, по которым Седдона круче, чем Гранд-Каньон</p>
+      </section>
+      <section class="advantages">
+        <h2 class="visually-hidden">Преимущества</h2>
+        <ul class="advantages-list">
+          <li class="advantages-list-item">
+            <h3 class="advantages-list-title">Настоящий городок</h3>
+            <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
+            <img src="#" alt="Настоящий городок">
+          </li>
+          <li class="advantages-list-item">
+            <h3 class="advantages-list-title">Небольшая площадь</h3>
+            <p class="advantages-description">Все достопримечательности находятся очень близко</p>
+          </li>
+          <li class="advantages-list-item">
+            <h3 class="advantages-list-title">Красивая дорога</h3>
+            <p class="advantages-description">Ехать в Седону из Лас-Вегаса совсем не скучно</p>
+          </li>
+          <li class="advantages-list-item">
+            <h3 class="advantages-list-title">Мало туристов</h3>
+            <p class="advantages-description">Большинство едет в Гранд-Каньон и толпится там</p>
+          </li>
+          <li class="advantages-list-item">
+            <img src="#" alt="Мост дьявола">
+            <h3 class="advantages-list-title">Там есть мост дьявола</h3>
+            <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+          </li>
+        </ul>
+      </section>
+      <section class="fetures">
+        <h2>Приезжайте в Седону отдохнуть в комфорте и уюте</h2>
+        <p>Опытный персонал и качественное обслуживание!</p>
+        <ul class="features-list">
+          <li class="features-list-item">
+            <img src="#" alt="Жилье">
+            <h3 class="features-list-title">Жилье</h3>
+            <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+          </li>
+          <li class="features-list-item">
+            <img src="#" alt="Еда">
+            <h3 class="features-list-title">Еда</h3>
+            <P class="features-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</P>
+          </li>
+          <li class="features-list-item">
+            <img src="#" alt="Сувениры">
+            <h3 class="features-list-title">Сувениры</h3>
+            <p class="features-description">Не только китайского, но и настоящего местного производства!</p>
+          </li>
+        </ul>
+      </section>
+      <section class="search">
+        <h2>Заинтересовались?</h2>
+        <p>Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <form action="catalog.html" target="_parent">
+          <button>Поиск гостиницы в Седоне</button>
+        </form>
+      </section>
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="email" action="https://echo.htmlacademy.ru/" method="post">
+          <input type="email" name="email" placeholder="Ваш e-mail">
+          <button class="button" type="submit">Подпишитесь</button>
+        </form>
+      </section>
     </main>
   </body>
 </html>
