--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Седона</title>
   </head>
   <body>
-    <header class="page-header">
+    <header class="main-header">
       <nav class="header-nav">
         <img src="#" alt="Логотип">
         <ul class="navigation-list">
@@ -103,5 +103,34 @@
         </form>
       </section>
     </main>
+    <footer class="main-footer">
+      <section class="social">
+        <h2 class="visually-hidden">Социальные сети</h2>
+        <ul class="social-list">
+          <li class="social-list-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">ВКонтакте</span>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">Twitter</span>
+            </a>
+          </li>
+          <li class="social-list-item">
+            <a class="button" href="#">
+              <span class="visually-hidden">YouTube</span>
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="phone">
+        <h2 class="visually-hidden">Номер телефона</h2>
+        <a class="phone-number" href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+      </section>
+      <p class="about-text">
+        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+      </p>
+    </footer>
   </body>
 </html>
