--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <link href="catalog.html">
     <title>Седона</title>
   </head>
   <body>
@@ -31,6 +30,7 @@
             <button type="button">Хочу сюда!</button>
           </li>
         </ul>
+        </nav>
     </header>
     <main class="main-index">
       <section class="hero">
@@ -126,7 +126,7 @@
       </section>
       <section class="phone">
         <h2 class="visually-hidden">Номер телефона</h2>
-        <a class="phone-number" href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+        <a class="phone-number" href="tel:+7(812)812-12-12">+7 (812) 812-12-12</a>
       </section>
       <p class="about-text">
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
