--- a/catalog.html
+++ b/catalog.html
@@ -4,5 +4,33 @@
     <meta charset="utf-8">
     <title>Каталог</title>
   </head>
-  <body></body>
+  <body>
+    <header class="main-header">
+      <nav class="header-nav">
+        <img src="#" alt="Логотип">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#">О Седоне</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="catalog.html">Гостинницы</a>
+          </li>
+        </ul>
+        <ul class="navigation-list navigation-user">
+          <li class="navigation-item">
+            <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="#"><span class="visually-hidden">Избранное</span></a>
+          </li>
+          <li class="navigation-item">
+            <button type="button">Хочу сюда!</button>
+          </li>
+        </ul>
+        </nav>
+    </header>
+  </body>
 </html>
