add subscribe to main

--- a/catalog.html
+++ b/catalog.html
@@ -32,6 +32,19 @@
         </ul>
         </nav>
     </header>
+    <main>
+      <section class="filter"></section>
+      <section class="catalog"></section>
+      <section class="subscribe">
+        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="email" action="https://echo.htmlacademy.ru/" method="post">
+          <input type="email" name="email" placeholder="Ваш e-mail">
+          <button class="button" type="submit">Подпишитесь</button>
+        </form>
+      </section>
+
+    </main>
     <footer class="main-footer">
       <section class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
