add checkbox and radio

--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,9 @@
   <body>
     <header class="main-header">
       <nav class="header-nav">
-        <img src="#" alt="Логотип">
+        <a class="navigation-logo" href="index.html">
+          <img class="main-header-logo" src="#" alt="Логотип">
+        </a>
         <ul class="navigation-list">
           <li class="navigation-item">
             <a class="navigation-link" href="#">Главная</a>
@@ -16,7 +18,7 @@
             <a class="navigation-link" href="#">О Седоне</a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="catalog.html">Гостинницы</a>
+            <a class="navigation-link navigation-link-current" href="catalog.html">Гостинницы</a>
           </li>
         </ul>
         <ul class="navigation-list navigation-user">
@@ -32,8 +34,69 @@
         </ul>
         </nav>
     </header>
-    <main>
-      <section class="filter"></section>
+    <main class="main-catalog">
+      <section class="filter">
+        <header class="catalog-header">
+          <h1 class="catalog-header-title">Гостинницы Седоны</h1>
+          <ul class="breadcrumbs">
+            <li class="breadcrumbs-item">
+              <img src="#">
+            </li>
+            <li class="breadcrumbs-item">
+              <img src="#">
+            </li>
+            <li class="breadcrumbs-item">
+              <a class="breadcrumbs-link">Гостинницы</a>
+            </li>
+          </ul>
+        </header>
+        <fieldset class="catalog-filter-group">
+          <legend class="catalog-filter-title">Инфраструктура</legend>
+          <ul class="catalog-filter-list">
+            <li class="catalog-filter-item">
+              <label class="control">
+                <input class="control-input" type="checkbox" name="pool">
+                Бассейн
+              </label>
+            </li>
+            <li class="catalog-filter-item">
+              <label class="control">
+                <input class="control-input" type="checkbox" name="parking">
+                Парковка
+              </label>
+            </li>
+            <li class="catalog-filter-item">
+              <label class="control">
+                <input class="control-input" type="checkbox" name="Wi-Fi">
+                Wi-Fi
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+        <fieldset class="catalog-filter-group">
+          <legend class="catalog-filter-title">Тип Жилья</legend>
+          <ul class="catalog-filter-list">
+            <li class="catalog-filter-item">
+              <label class="control">
+                <input class="control-input" type="radio" name="hotel-type" value="hotel" checked>
+                Гостинница
+              </label>
+            </li>
+            <li class="catalog-filter-item">
+              <label class="control">
+                <input class="control-input" type="radio" name="hotel-type" value="motel">
+                Мотель
+              </label>
+            </li>
+            <li class="catalog-filter-item">
+              <label class="control">
+                <input class="control-input" type="radio" name="hotel-type" value="apartments">
+                Апартаменты
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+      </section>
       <section class="catalog"></section>
       <section class="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
@@ -43,7 +106,6 @@
           <button class="button" type="submit">Подпишитесь</button>
         </form>
       </section>
-
     </main>
     <footer class="main-footer">
       <section class="social">
