--- a/catalog.html
+++ b/catalog.html
@@ -120,6 +120,62 @@
           <span class="visually-hidden">Показать список</span>
         </a>
       </section>
+      <div class="hotel-card">
+        <a class="hotel-card-link" href="#">
+          <img class="hotel-card-image" src="#">
+          <h3 class="hotel-card-title">Amara Resort & Spa</h3>
+        </a>
+        <span class="hotel-card-type">Гостинница</span>
+        <span class="hotel-card-price">От 4000 ₽</span>
+        <a class="button-about button" href="#">Подробнее</a>
+        <a class="button-like button" href="#">В Избранное</a>
+        <p class="star-5">
+          <span class="visually-hidden">4 звезды</span>
+        </p>
+        <p class="rating">Рейтинг 8,5</p>
+      </div>
+      <div class="hotel-card">
+        <a class="hotel-card-link" href="#">
+          <img class="hotel-card-image" src="#">
+          <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
+        </a>
+        <span class="hotel-card-type">Гостинница</span>
+        <span class="hotel-card-price">От 5000 ₽</span>
+        <a class="button-about button" href="#">Подробнее</a>
+        <a class="button-like button" href="#">В Избранном</a>
+        <p class="star-5">
+          <span class="visually-hidden">4 звезды</span>
+        </p>
+        <p class="rating">Рейтинг 9,2</p>
+      </div>
+      <div class="hotel-card">
+        <a class="hotel-card-link" href="#">
+          <img class="hotel-card-image" src="#">
+          <h3 class="hotel-card-title">Desert Quail Inn</h3>
+        </a>
+        <span class="hotel-card-type">Гостинница</span>
+        <span class="hotel-card-price">От 2500 ₽</span>
+        <a class="button-about button" href="#">Подробнее</a>
+        <a class="button-like button" href="#">В Избранное</a>
+        <p class="star-5">
+          <span class="visually-hidden">3 звезды</span>
+        </p>
+        <p class="rating">Рейтинг 6,9</p>
+      </div>
+      <div class="hotel-card">
+        <a class="hotel-card-link" href="#">
+          <img class="hotel-card-image" src="#">
+          <h3 class="hotel-card-title">GreenTree Inn</h3>
+        </a>
+        <span class="hotel-card-type">Гостинница</span>
+        <span class="hotel-card-price">От 1500 ₽</span>
+        <a class="button-about button" href="#">Подробнее</a>
+        <a class="button-like button" href="#">В Избранное</a>
+        <p class="star-5">
+          <span class="visually-hidden">2 звезды</span>
+        </p>
+        <p class="rating">Рейтинг 5,0</p>
+      </div>
       <section class="subscribe">
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
