--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="header-nav">
         <a class="navigation-logo" href="index.html">
-          <img class="main-header-logo" src="#" alt="Логотип">
+          <img class="main-header-logo" src="#" alt="Логотип Седоны">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -29,7 +29,7 @@
             <a class="navigation-link" href="#"><span class="visually-hidden">Избранное</span></a>
           </li>
           <li class="navigation-item">
-            <button type="button">Хочу сюда!</button>
+            <a class="navigation-link" href="#">Хочу сюда!<span class="visually-hidden">Бронирование</span></a>
           </li>
         </ul>
         </nav>
@@ -121,59 +121,59 @@
         </a>
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#">
+            <img class="hotel-card-image" src="#" alt="Amara Resort & Spa">
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
           </a>
           <span class="hotel-card-type">Гостинница</span>
           <span class="hotel-card-price">От 4000 ₽</span>
-          <a class="button-about button" href="#">Подробнее</a>
-          <a class="button-like button" href="#">В Избранное</a>
-          <p class="star-5">
+          <a class="button button-about" href="#">Подробнее</a>
+          <a class="button button-like" href="#">В Избранное</a>
+          <span class="star star-4">
             <span class="visually-hidden">4 звезды</span>
-          </p>
-          <p class="rating">Рейтинг 8,5</p>
+          </span>
+          <span class="rating">Рейтинг 8,5</span>
         </div>
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#">
+            <img class="hotel-card-image" src="#" alt="Villas at Poco Diablo">
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
           </a>
           <span class="hotel-card-type">Гостинница</span>
           <span class="hotel-card-price">От 5000 ₽</span>
-          <a class="button-about button" href="#">Подробнее</a>
-          <a class="button-like button" href="#">В Избранном</a>
-          <p class="star-5">
+          <a class="button button-about" href="#">Подробнее</a>
+          <a class="button button-like" href="#">В Избранном</a>
+          <span class="star star-4">
             <span class="visually-hidden">4 звезды</span>
-          </p>
-          <p class="rating">Рейтинг 9,2</p>
+          </span>
+          <span class="rating">Рейтинг 9,2</span>
         </div>
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#">
+            <img class="hotel-card-image" src="#" alt="Desert Quail Inn">
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
           </a>
           <span class="hotel-card-type">Гостинница</span>
           <span class="hotel-card-price">От 2500 ₽</span>
-          <a class="button-about button" href="#">Подробнее</a>
-          <a class="button-like button" href="#">В Избранное</a>
-          <p class="star-5">
+          <a class="button button-about" href="#">Подробнее</a>
+          <a class="button button-like" href="#">В Избранное</a>
+          <span class="star star-3">
             <span class="visually-hidden">3 звезды</span>
-          </p>
-          <p class="rating">Рейтинг 6,9</p>
+          </span>
+          <span class="rating">Рейтинг 6,9</span>
         </div>
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#">
+            <img class="hotel-card-image" src="#" alt="GreenTree Inn">
             <h3 class="hotel-card-title">GreenTree Inn</h3>
           </a>
           <span class="hotel-card-type">Гостинница</span>
           <span class="hotel-card-price">От 1500 ₽</span>
-          <a class="button-about button" href="#">Подробнее</a>
-          <a class="button-like button" href="#">В Избранное</a>
-          <p class="star-5">
+          <a class="button button-about" href="#">Подробнее</a>
+          <a class="button button-like" href="#">В Избранное</a>
+          <span class="star star-2">
             <span class="visually-hidden">2 звезды</span>
-          </p>
-          <p class="rating">Рейтинг 5,0</p>
+          </span>
+          <span class="rating">Рейтинг 5,0</span>
         </div>
         <ul class="pagination">
           <li class="pagination-item">
