--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
-        <img class="text welcome" src="#">
-        <img class="text gorgeous" src="#">
-        <img class="text sedona" src="#">
+        <img class="text welcome" src="#" alt="text-welcome">
+        <img class="text gorgeous" src="#" alt="text-gorgeous">
+        <img class="text sedona" src="#" alt="text-sedona">
         <h2 class="title hero-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="subtitle hero-subtitle">Рассмотрим причины, по которым Седдона круче, чем Гранд-Каньон</p>
       </section>
