--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="header-nav">
         <a class="navigation-logo" href="index.html">
-          <img class="main-header-logo" src="#" alt="Логотип Седоны">
+          <img class="main-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны">
         </a>
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -40,7 +40,8 @@
           <h1 class="catalog-header-title">Гостинницы Седоны</h1>
           <ul class="breadcrumbs">
             <li class="breadcrumbs-item">
-              <img src="#" alt="home">
+              <img src="images/home_catalog.svg" width="12" height="12" alt="home">
+              <img src="images/arrow_catalog.svg" width="6" height="10" alt="arrow">
             </li>
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link">Гостинницы</a>
@@ -128,12 +129,15 @@
         <a href="#" class="button button-light">
           <span class="visually-hidden">Показать карточки</span>
         </a>
+        <a href="#" class="button button-light">
+          <span class="visually-hidden">Показать карточки</span>
+        </a>
         <a href="#" class="button">
-          <span class="visually-hidden">Показать список</span>
+          <span class="visually-hidden">Слайд-шоу</span>
         </a>
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#" alt="Amara Resort & Spa">
+            <img class="hotel-card-image" src="images/Amara_Resort.jpg" width="300" height="212" alt="Amara Resort & Spa">
             <h3 class="hotel-card-title">Amara Resort & Spa</h3>
           </a>
           <span class="hotel-card-type">Гостинница</span>
@@ -147,7 +151,7 @@
         </div>
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#" alt="Villas at Poco Diablo">
+            <img class="hotel-card-image" src="images/Villas_as_Poco_Diablo.jpg" width="300" height="212" alt="Villas at Poco Diablo">
             <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
           </a>
           <span class="hotel-card-type">Гостинница</span>
@@ -161,7 +165,7 @@
         </div>
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#" alt="Desert Quail Inn">
+            <img class="hotel-card-image" src="images/Desert_Quail_Inn.jpg" width="300" height="212" alt="Desert Quail Inn">
             <h3 class="hotel-card-title">Desert Quail Inn</h3>
           </a>
           <span class="hotel-card-type">Гостинница</span>
@@ -175,7 +179,7 @@
         </div>
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
-            <img class="hotel-card-image" src="#" alt="GreenTree Inn">
+            <img class="hotel-card-image" src="images/GreenTree_Inn.jpg" width="300" height="212" alt="GreenTree Inn">
             <h3 class="hotel-card-title">GreenTree Inn</h3>
           </a>
           <span class="hotel-card-type">Гостинница</span>
@@ -222,18 +226,18 @@
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="social-list">
           <li class="social-list-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">ВКонтакте</span>
+            <a class="button" href="https://vk.com/htmlacademy">
+              <img src="images/vk.svg" width="24" height="14" alt="VK">
             </a>
           </li>
           <li class="social-list-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">Twitter</span>
+            <a class="button" href="https://t.me/htmlacademy">
+              <img src="images/telegram.svg" width="18" height="15" alt="telegram">
             </a>
           </li>
           <li class="social-list-item">
-            <a class="button" href="#">
-              <span class="visually-hidden">YouTube</span>
+            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+              <img src="images/youtube.svg" width="22" height="17" alt="YouTube">
             </a>
           </li>
         </ul>
@@ -243,7 +247,9 @@
         <a class="phone-number" href="tel:+7(812)812-12-12">+7 (812) 812-12-12</a>
       </section>
       <p class="about-text">
-        <a class="htmlacademy-link" href="https://htmlacademy.ru/">.html academy</a>
+        <a class="htmlacademy-link" href="https://htmlacademy.ru/">
+          <img src="images/HTML_academy_logo.svg" width="115" height="33" alt="HTML academy logo">
+        </a>
       </p>
     </footer>
   </body>
