edit graphics for index

--- a/index.html
+++ b/index.html
@@ -21,10 +21,14 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
+            <a class="navigation-link" href="#">
+              <img src="images/search.svg" width="18" height="18" alt="search">
+            </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#"><span class="visually-hidden">Избранное</span></a>
+            <a class="navigation-link" href="#">
+              <img src="images/like.svg" width="18" height="17" alt="like">
+            </a>
           </li>
           <li class="navigation-item">
             <a class="navigation-link" href="#">Хочу сюда!<span class="visually-hidden">Бронирование</span></a>
