--- a/index.html
+++ b/index.html
@@ -39,9 +39,7 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
-        <img class="text welcome" src="images/text-welcome.png" width="188" height="45" alt="text-welcome">
-        <img class="text gorgeous" src="images/text-gorgeous.png" width="256" height="29" alt="text-gorgeous">
-        <img class="text sedona" src="images/text-sedona.png" width="457" height="213" alt="text-sedona">
+        <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
         <h2 class="title hero-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
         <p class="subtitle hero-subtitle">Рассмотрим причины, по которым Седдона круче, чем Гранд-Каньон</p>
       </section>
@@ -51,7 +49,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
-            <img src="images/настоящий_городок.jpg"  width="800" height="385" alt="Настоящий городок">
+            <img src="images/sedona view.jpg"  width="800" height="385" alt="Настоящий городок">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -66,7 +64,7 @@
             <p class="advantages-description">Большинство едет в Гранд-Каньон и толпится там</p>
           </li>
           <li class="advantages-item">
-            <img src="images/мост_дьявола.jpg" width="800" height="385" alt="Мост дьявола">
+            <img src="images/devil_bridge.jpg" width="800" height="385" alt="Мост дьявола">
             <h3 class="advantages-list-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
@@ -77,17 +75,17 @@
         <p class="subtitle section-subtitle">Опытный персонал и качественное обслуживание!</p>
         <ul class="features-list">
           <li class="features-item">
-            <img src="images/жилье.svg" width="75" height="72" alt="Жилье">
+            <img src="images/residential.svg" width="75" height="72" alt="Жилье">
             <h3 class="features-title">Жилье</h3>
             <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
           <li class="features-item">
-            <img src="images/еда.svg" width="74" height="70" alt="Еда">
+            <img src="images/food.svg" width="74" height="70" alt="Еда">
             <h3 class="features-title">Еда</h3>
             <P class="features-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</P>
           </li>
           <li class="features-item">
-            <img src="images/сувениры.svg" width="64" height="76" alt="Сувениры">
+            <img src="images/souvenirs.svg" width="64" height="76" alt="Сувениры">
             <h3 class="features-title">Сувениры</h3>
             <p class="features-description">Не только китайского, но и настоящего местного производства!</p>
           </li>
