add style for header and main (hero)

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Седона</title>
   </head>
   <body>
@@ -31,7 +32,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда!<span class="visually-hidden">Бронирование</span></a>
+            <a class="navigation-link navigation-button" href="#">Хочу сюда!<span class="visually-hidden">Бронирование</span></a>
           </li>
         </ul>
         </nav>
@@ -39,9 +40,11 @@
     <main class="main-index">
       <section class="hero">
         <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
-        <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
-        <h2 class="title hero-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-        <p class="subtitle hero-subtitle">Рассмотрим причины, по которым Седдона круче, чем Гранд-Каньон</p>
+          <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
+          <div class="hero-subscription">
+            <h2 class="hero-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
+            <p class="hero-subtitle">Рассмотрим причины, по которым Седдона круче, чем Гранд-Каньон</p>
+          </div>
       </section>
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
@@ -71,20 +74,20 @@
         </ul>
       </section>
       <section class="features">
-        <h2 class="title section-title">Приезжайте в Седону отдохнуть в комфорте и уюте</h2>
-        <p class="subtitle section-subtitle">Опытный персонал и качественное обслуживание!</p>
+        <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте</h2>
+        <p class="section-subtitle">Опытный персонал и качественное обслуживание!</p>
         <ul class="features-list">
-          <li class="features-item">
+          <li class="features-item-1">
             <img src="images/residential.svg" width="75" height="72" alt="Жилье">
             <h3 class="features-title">Жилье</h3>
             <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
-          <li class="features-item">
+          <li class="features-item-2">
             <img src="images/food.svg" width="74" height="70" alt="Еда">
             <h3 class="features-title">Еда</h3>
             <P class="features-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</P>
           </li>
-          <li class="features-item">
+          <li class="features-item-3">
             <img src="images/souvenirs.svg" width="64" height="76" alt="Сувениры">
             <h3 class="features-title">Сувениры</h3>
             <p class="features-description">Не только китайского, но и настоящего местного производства!</p>
@@ -92,8 +95,8 @@
         </ul>
       </section>
       <section class="search">
-        <h2 class="title search-title">Заинтересовались?</h2>
-        <p class="subtitle search-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+        <h2 class="search-title">Заинтересовались?</h2>
+        <p class="search-subtitle">Укажите предполагаемые даты поездки, и мы покажем вам лучшие предложения гостиниц в Седоне</p>
         <a class='search' href='catalog.html'>Поиск гостиницы в Седоне</a>
       </section>
       <section class="subscribe">
