--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       <section class="hero">
         <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
           <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
-          <div class="hero-subscription">
+          <div class="hero-description">
             <h2 class="hero-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
-            <p class="hero-subtitle">Рассмотрим причины, по которым Седдона круче, чем Гранд-Каньон</p>
+            <p class="hero-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон</p>
           </div>
       </section>
       <section class="advantages">
@@ -52,7 +52,7 @@
           <li class="advantages-item">
             <h3 class="advantages-title">Настоящий городок</h3>
             <p class="advantages-description">Седона - не аттракцион для туристов, там течет своя жизнь</p>
-            <img src="images/sedona view.jpg"  width="800" height="385" alt="Настоящий городок">
+            <img src="images/sedona_view.jpg"  width="800" height="385" alt="Настоящий городок">
           </li>
           <li class="advantages-item">
             <h3 class="advantages-title">Небольшая площадь</h3>
@@ -68,26 +68,26 @@
           </li>
           <li class="advantages-item">
             <img src="images/devil_bridge.jpg" width="800" height="385" alt="Мост дьявола">
-            <h3 class="advantages-list-title">Там есть мост дьявола</h3>
+            <h3 class="advantages-title">Там есть мост дьявола</h3>
             <p class="advantages-description">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
           </li>
         </ul>
       </section>
       <section class="features">
-        <h2 class="section-title">Приезжайте в Седону отдохнуть в комфорте и уюте</h2>
-        <p class="section-subtitle">Опытный персонал и качественное обслуживание!</p>
+        <h2 class="features-title">Приезжайте в Седону отдохнуть в комфорте и уюте</h2>
+        <p class="features-subtitle">Опытный персонал и качественное обслуживание!</p>
         <ul class="features-list">
-          <li class="features-item-1">
+          <li class="features-item">
             <img src="images/residential.svg" width="75" height="72" alt="Жилье">
             <h3 class="features-title">Жилье</h3>
             <p class="features-description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
           </li>
-          <li class="features-item-2">
+          <li class="features-item">
             <img src="images/food.svg" width="74" height="70" alt="Еда">
             <h3 class="features-title">Еда</h3>
             <P class="features-description">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</P>
           </li>
-          <li class="features-item-3">
+          <li class="features-item">
             <img src="images/souvenirs.svg" width="64" height="76" alt="Сувениры">
             <h3 class="features-title">Сувениры</h3>
             <p class="features-description">Не только китайского, но и настоящего местного производства!</p>
@@ -104,7 +104,7 @@
         <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="email" action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" name="email" placeholder="Ваш e-mail">
-          <button class="button" type="submit">Подпишитесь</button>
+          <button class="button" type="submit">Подписаться</button>
         </form>
       </section>
     </main>
@@ -131,7 +131,7 @@
       </div>
       <div class="phone">
         <h2 class="visually-hidden">Номер телефона</h2>
-        <a class="link link-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
+        <a class="link-phone" href="tel:+78128121212">+7 (812) 812-12-12</a>
       </div>
       <p class="about-text">
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">
