--- a/catalog.html
+++ b/catalog.html
@@ -2,6 +2,7 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="styles/styles.css">
     <title>Каталог</title>
   </head>
   <body>
@@ -40,8 +41,8 @@
           <h1 class="catalog-header-title">Гостинницы Седоны</h1>
           <ul class="breadcrumbs">
             <li class="breadcrumbs-item">
-              <img src="images/home_catalog.svg" width="12" height="12" alt="home">
-              <img src="images/arrow_catalog.svg" width="6" height="10" alt="arrow">
+              <img class="home-icon" src="images/home_catalog.svg" width="12" height="12" alt="home">
+              <img class="arrow-icon" src="images/arrow_catalog.svg" width="6" height="10" alt="arrow">
             </li>
             <li class="breadcrumbs-item">
               <a class="breadcrumbs-link">Гостинницы</a>
@@ -54,19 +55,19 @@
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="checkbox" name="pool" checked>
+                  <input class="input-checkbox" type="checkbox" name="pool" checked>
                   Бассейн
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="checkbox" name="parking" checked>
+                  <input class="input-checkbox" type="checkbox" name="parking" checked>
                   Парковка
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="checkbox" name="Wi-Fi">
+                  <input class="input-checkbox" type="checkbox" name="Wi-Fi">
                   Wi-Fi
                 </label>
               </li>
@@ -77,19 +78,19 @@
             <ul class="catalog-filter-list">
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="radio" name="hotel-type" value="hotel" checked>
+                  <input class="input-radio" type="radio" name="hotel-type" value="hotel" checked>
                   Гостинница
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="radio" name="hotel-type" value="motel">
+                  <input class="input-radio" type="radio" name="hotel-type" value="motel">
                   Мотель
                 </label>
               </li>
               <li class="catalog-filter-item">
                 <label class="control">
-                  <input class="control-input" type="radio" name="hotel-type" value="apartments">
+                  <input class="input-radio" type="radio" name="hotel-type" value="apartments">
                   Апартаменты
                 </label>
               </li>
@@ -98,6 +99,7 @@
           <fieldset class="catalog-filter">
             <div class="filter-wrapper">
               <div class="filter-range">
+                <legend class="catalog-filter-title">Стоимость, ₽:</legend>
                 <span class="filter-text">от</span>
                 <input class="cost-min" type="number" placeholder="цена от" aria-label="минимальная стоимость" value="0">
                 <span class="filter-text">до</span>
@@ -126,14 +128,14 @@
           <option value="popular">Сначала популярное</option>
           <option value="expensive">Сначала дорогое</option>
         </select>
-        <a href="#" class="button button-light">
-          <span class="visually-hidden">Показать карточки</span>
+        <a href="#" class="button-card">
+          <span class="visually-hidden">Карточки</span>
         </a>
-        <a href="#" class="button button-light">
-          <span class="visually-hidden">Показать карточки</span>
-        </a>
-        <a href="#" class="button">
+        <a href="#" class="button-slide">
           <span class="visually-hidden">Слайд-шоу</span>
+        </a>
+        <a href="#" class="button-list">
+          <span class="visually-hidden">Список</span>
         </a>
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
@@ -205,38 +207,38 @@
             <a class="pagination-link" href="#">4</a>
           </li>
           <li class="pagination-item">
-            <a class="pagination-link" href="#">...</a>
+            <a class="pagination-link pagination-list" href="#">...</a>
           </li>
           <li class="pagination-item">
             <a class="pagination-link" href="#">10</a>
           </li>
         </ul>
       </section>
-      <section class="subscribe">
-        <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
-        <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+      <section class="subscribe-catalog">
+        <h2 class="subscribe-title-catalog">Подпишитесь на рассылку</h2>
+        <p class="subscribe-description-catalog">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="email" action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" name="email" placeholder="Ваш e-mail">
-          <button class="button" type="submit">Подпишитесь</button>
+          <button class="button button-catalog" type="submit">Подпишитесь</button>
         </form>
       </section>
     </main>
-    <footer class="main-footer">
+    <footer class="footer-catalog">
       <section class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="social-list">
           <li class="social-list-item">
-            <a class="button" href="https://vk.com/htmlacademy">
+            <a class="link" href="https://vk.com/htmlacademy">
               <img src="images/vk.svg" width="24" height="14" alt="VK">
             </a>
           </li>
           <li class="social-list-item">
-            <a class="button" href="https://t.me/htmlacademy">
+            <a class="link" href="https://t.me/htmlacademy">
               <img src="images/telegram.svg" width="18" height="15" alt="telegram">
             </a>
           </li>
           <li class="social-list-item">
-            <a class="button" href="https://www.youtube.com/user/htmlacademyru">
+            <a class="link" href="https://www.youtube.com/user/htmlacademyru">
               <img src="images/youtube.svg" width="22" height="17" alt="YouTube">
             </a>
           </li>
@@ -244,7 +246,7 @@
       </section>
       <section class="phone">
         <h2 class="visually-hidden">Номер телефона</h2>
-        <a class="phone-number" href="tel:+7(812)812-12-12">+7 (812) 812-12-12</a>
+        <a class="link-phone" href="tel:+7(812)812-12-12">+7 (812) 812-12-12</a>
       </section>
       <p class="about-text">
         <a class="htmlacademy-link" href="https://htmlacademy.ru/">
