--- a/catalog.html
+++ b/catalog.html
@@ -24,13 +24,17 @@
         </ul>
         <ul class="navigation-list navigation-user">
           <li class="navigation-item">
-            <a class="navigation-link" href="#"><span class="visually-hidden">Поиск</span></a>
+            <a class="navigation-link" href="#">
+              <img src="images/search.svg" width="18" height="18" alt="search">
+            </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#"><span class="visually-hidden">Избранное</span></a>
+            <a class="navigation-link" href="#">
+              <img src="images/like.svg" width="18" height="17" alt="like">
+            </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link" href="#">Хочу сюда!<span class="visually-hidden">Бронирование</span></a>
+            <a class="navigation-link navigation-box" href="#">Хочу сюда!<span class="visually-hidden">Бронирование</span></a>
           </li>
         </ul>
         </nav>
@@ -214,12 +218,12 @@
           </li>
         </ul>
       </section>
-      <section class="subscribe-catalog">
-        <h2 class="subscribe-title-catalog">Подпишитесь на рассылку</h2>
-        <p class="subscribe-description-catalog">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form class="email" action="https://echo.htmlacademy.ru/" method="post">
+      <section class="subscribe subscribe-catalog">
+        <h2 class="subscribe-title catalog-title">Подпишитесь на рассылку</h2>
+        <p class="subscribe-description catalog-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <form class="form-email" action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" name="email" placeholder="Ваш e-mail">
-          <button class="button button-catalog" type="submit">Подпишитесь</button>
+          <button class="button button-subscribe" type="submit">Подпишитесь</button>
         </form>
       </section>
     </main>
