--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             </a>
           </li>
           <li class="navigation-item">
-            <a class="navigation-link navigation-button" href="#">Хочу сюда!<span class="visually-hidden">Бронирование</span></a>
+            <a class="navigation-link navigation-box" href="#">Хочу сюда!<span class="visually-hidden">Бронирование</span></a>
           </li>
         </ul>
         </nav>
@@ -41,11 +41,13 @@
       <section class="hero">
         <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
           <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
+          <div class="hero-line"></div>
           <div class="hero-description">
             <h2 class="hero-title">Седона - небольшой городок в Аризоне, заслуживающий большего!</h2>
             <p class="hero-subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон</p>
           </div>
       </section>
+
       <section class="advantages">
         <h2 class="visually-hidden">Преимущества</h2>
         <ul class="advantages-list">
@@ -103,7 +105,7 @@
         <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
         <p class="subscribe-description">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="email" action="https://echo.htmlacademy.ru/" method="post">
-          <input type="email" name="email" placeholder="Ваш e-mail">
+          <input type="form-email" name="email" placeholder="Ваш e-mail">
           <button class="button button-subscribe" type="submit">Подписаться</button>
         </form>
       </section>
