--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="header-nav">
+      <nav class="navigation">
         <img class='logo' src="images/logo.svg" alt="Логотип">
         <ul class="navigation-list">
           <li class="navigation-item">
@@ -38,6 +38,7 @@
         </nav>
     </header>
     <main class="main-index">
+      <div class="main-container">
       <section class="hero">
         <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
           <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
@@ -109,8 +110,10 @@
           <button class="button button-subscribe" type="submit">Подписаться</button>
         </form>
       </section>
+      </div>
     </main>
     <footer class="main-footer">
+      <div class="main-footer-container">
       <div class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="social-list">
@@ -140,6 +143,7 @@
           <img src="images/HTML_academy_logo.svg" width="115" height="33" alt="HTML academy logo">
         </a>
       </p>
+      </div>
     </footer>
   </body>
 </html>
