--- a/catalog.html
+++ b/catalog.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header class="main-header">
-      <nav class="header-nav">
+      <nav class="navigation">
         <a class="navigation-logo" href="index.html">
           <img class="main-header-logo" src="images/logo.svg" width="140" height="70" alt="Логотип Седоны">
         </a>
@@ -40,6 +40,7 @@
         </nav>
     </header>
     <main class="main-catalog">
+      <div class="page-container">
       <section class="filter">
         <header class="catalog-header">
           <h1 class="catalog-header-title">Гостинницы Седоны</h1>
@@ -126,6 +127,7 @@
         </form>
       </section>
       <section class="catalog">
+        <div class="catalog-sort">
         <h2 class="found">Найдено гостиниц: 38</h2>
         <select class="select-control" aria-label="Сортировка">
           <option value="cheap">Сначала дешевое</option>
@@ -141,6 +143,8 @@
         <a href="#" class="button-list">
           <span class="visually-hidden">Список</span>
         </a>
+        </div>
+        <div class="hotel-card-container">
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
             <img class="hotel-card-image" src="images/Amara_Resort.jpg" width="300" height="212" alt="Amara Resort & Spa">
@@ -183,6 +187,8 @@
           </span>
           <span class="rating">Рейтинг 6,9</span>
         </div>
+        </div>
+        <div class="hotel-card-container">
         <div class="hotel-card">
           <a class="hotel-card-link" href="#">
             <img class="hotel-card-image" src="images/GreenTree_Inn.jpg" width="300" height="212" alt="GreenTree Inn">
@@ -196,6 +202,7 @@
             <span class="visually-hidden">2 звезды</span>
           </span>
           <span class="rating">Рейтинг 5,0</span>
+        </div>
         </div>
         <ul class="pagination">
           <li class="pagination-item">
@@ -226,8 +233,10 @@
           <button class="button button-subscribe" type="submit">Подпишитесь</button>
         </form>
       </section>
+      </div>
     </main>
     <footer class="footer-catalog">
+      <div class="page-footer-container">
       <section class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="social-list">
@@ -257,6 +266,7 @@
           <img src="images/HTML_academy_logo.svg" width="115" height="33" alt="HTML academy logo">
         </a>
       </p>
+      </div>
     </footer>
   </body>
 </html>
