--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </nav>
     </header>
     <main class="main-index">
-      <div class="main-container">
+      <div class="page-container">
       <section class="hero">
         <h1 class="visually-hidden">Welcome to the gorgeous Sedona "Because the Grand Canyon sucks!"</h1>
           <img class="welcome" src="images/welcome.svg" alt="Добро пожаловать в Седону">
@@ -113,7 +113,7 @@
       </div>
     </main>
     <footer class="main-footer">
-      <div class="main-footer-container">
+      <div class="page-footer-container">
       <div class="social">
         <h2 class="visually-hidden">Социальные сети</h2>
         <ul class="social-list">
