:heavy_check_mark: Сборка #6

--- a/6/catalog.html
+++ b/6/catalog.html
@@ -43,17 +43,17 @@
           </ul>
         </nav>
       </header>
-      <main class="main-catalog">
+      <main class="main-catalog main-container">
         <section class="filter">
           <header class="catalog-header">
-            <h1 class="catalog-header-title">Гостинницы Седоны</h1>
+            <h1 class="catalog-header-title">Гостиницы Седоны</h1>
             <ul class="breadcrumbs">
               <li class="breadcrumbs-item">
                 <img class="home-icon" src="images/home_catalog.svg" width="12" height="12" alt="home">
                 <img class="arrow-icon" src="images/arrow_catalog.svg" width="6" height="10" alt="arrow">
               </li>
               <li class="breadcrumbs-item">
-                <a class="breadcrumbs-link">Гостинницы</a>
+                <a class="breadcrumbs-link">Гостиницы</a>
               </li>
             </ul>
           </header>
@@ -156,7 +156,7 @@
                   alt="Amara Resort & Spa">
                 <h3 class="hotel-card-title">Amara Resort & Spa</h3>
               </a>
-              <span class="hotel-card-type">Гостинница</span>
+              <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 4000 ₽</span>
               <a class="button button-about" href="#">Подробнее</a>
               <a class="button button-like" href="#">В Избранное</a>
@@ -171,7 +171,7 @@
                   alt="Villas at Poco Diablo">
                 <h3 class="hotel-card-title">Villas at Poco Diablo</h3>
               </a>
-              <span class="hotel-card-type">Гостинница</span>
+              <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 5000 ₽</span>
               <a class="button button-about" href="#">Подробнее</a>
               <a class="button button-like" href="#">В Избранном</a>
@@ -186,7 +186,7 @@
                   alt="Desert Quail Inn">
                 <h3 class="hotel-card-title">Desert Quail Inn</h3>
               </a>
-              <span class="hotel-card-type">Гостинница</span>
+              <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 2500 ₽</span>
               <a class="button button-about" href="#">Подробнее</a>
               <a class="button button-like" href="#">В Избранное</a>
@@ -203,7 +203,7 @@
                   alt="GreenTree Inn">
                 <h3 class="hotel-card-title">GreenTree Inn</h3>
               </a>
-              <span class="hotel-card-type">Гостинница</span>
+              <span class="hotel-card-type">Гостиница</span>
               <span class="hotel-card-price">От 1500 ₽</span>
               <a class="button button-about" href="#">Подробнее</a>
               <a class="button button-like" href="#">В Избранное</a>
